name:                Discaptive
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         game
homepage:            https://github.com/Fourmilier/Discaptive#readme
license:             BSD3
license-file:        LICENSE
author:              Miranda Schiefelbusch
maintainer:          cschiefelbusch@techfak.uni-bielefeld.de
copyright:           2016 Miranda Schiefelbusch
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Discaptive-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Discaptive
  default-language:    Haskell2010

test-suite Discaptive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Discaptive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Fourmilier/Discaptive
